--- a/Location-Tracker/index.html
+++ b/Location-Tracker/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Location Tracker App</h2>
-    <p>Clock here to show Your Location</p>
+    <p>Click here to show Your Location</p>
     <button class="location-btn">Show User Location</button>
     <p class="show-location-details"></p>
 </body>
