bmi calculator added

--- a/Location-Tracker/index.html
+++ b/Location-Tracker/index.html
@@ -6,10 +6,16 @@
     <title>Location Tracker</title>
 </head>
 <body>
-    <h2>Location Tracker App</h2>
-    <p>Click here to show Your Location</p>
-    <button class="location-btn">Show User Location</button>
+    <div>
+        <h2>Location Tracker App</h2>
+    </div>
+    <div class="userDetails">
+        <label for="userName">Name : </label>
+        <input type="text" name="userName" id="userName">
+        <button class="location-btn">Show User Location</button>
+    </div>
     <p class="show-location-details"></p>
 </body>
 <script src="script.js"></script>
+
 </html>
