--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <main>
         <ol>
             <li><a href="./Calculator-in-Javascript">Calculator</a></li>
+            <li><a href="./Bmi-Calculator-in-Javascript">Bmi Calculator</a></li>
             <li><a href="./Countdown-Timer-in-JavaScript">Countdown Timer</a></li>
             <li><a href="./Form-Validation-in-JavaScript/">Form Validation</a></li>
             <li><a href="./Notes-Taking-App-using-JavaScript">Notes Taking App</a></li>
@@ -61,6 +62,9 @@
             <li><a href="./Random-Password-Generator-in-JavaScript">Random Password Generator</a></li>
             <li><a href="./Type-Writter-Effect-in-JavaScript">Type Writter Effect</a></li>
             <li><a href="./Youtube-Home-Page-Clone">Youtube Home Page Clone</a></li>
+            <li><a href="./Youtube-Home-Page-Clone">Youtube Home Page Clone</a></li>
+            <li><a href="./Location-Tracker">Location Tracker</a></li>
+            <li><a href="./Navbar-Design-in-Javascript">Navbar Design</a></li>
         </ol>
     </main>
 </body>
