--- a/index.html
+++ b/index.html
@@ -9,34 +9,40 @@
     <link rel="stylesheet" href="style.css">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             font-family: "Ubuntu", sans-serif;
         }
-        body{
+
+        body {
             display: flex;
             height: 100vh;
             flex-direction: column;
             align-items: center;
             background-color: #0D1117;
         }
-        nav{
+
+        nav {
             width: 100vw;
             background-color: #ffffff;
             padding: 20px 0;
             text-align: center;
         }
-        main{
+
+        main {
             color: #ffffff;
             padding-top: 30px;
             font-size: 18px;
         }
-        main li{
+
+        main li {
             padding: 8px 0;
         }
-        main li a{
+
+        main li a {
             text-decoration: none;
             color: #adabab;
         }
@@ -49,16 +55,25 @@
     </nav>
     <main>
         <ol>
-            <li><a href="./advance-digital-clock">Advance Digital Clock</a></li>
+            <li><a href="./digital-clock-1">Digital Clock 1</a></li>
+            <li><a href="./digital-clock-2">Digital Clock 2</a></li>
             <li><a href="./calculator">Calculator</a></li>
-            <li><a href="./bmi-calculator">Bmi Calculator</a></li>
+            <li><a href="./background-changer-1">Background Changer 1</a></li>
+            <li><a href="./background-changer-2">Background Changer 1</a></li>
+            <li><a href="./bmi-calculator-1">Bmi Calculator-1</a></li>
+            <li><a href="./bmi-calculator-1">Bmi Calculator-2</a></li>
             <li><a href="./countdown-timer">Countdown Timer</a></li>
             <li><a href="./form-validation">Form Validation</a></li>
+            <li><a href="./guess-number-game">Guess Number Game</a></li>
+            <li><a href="./guess-number-game">keypress ode</a></li>
+            <li><a href="./guess-number-game">keypress ode</a></li>
+            <li><a href="./keypress-code">Keypress Code</a></li>
             <li><a href="./notes-taking-app">Notes Taking App</a></li>
             <li><a href="./password-manager">Password Manager</a></li>
             <li><a href="./quiz-app">Quiz App</a></li>
             <li><a href="./qr-code-generateor">QR code Generateor</a></li>
-            <li><a href="./random-color-generator">Random Color Generator</a></li>
+            <li><a href="./random-color-generator-1">Random Color Generator 1</a></li>
+            <li><a href="./random-color-generator-2">Random Color Generator 2</a></li>
             <li><a href="./random-jokes-generator">Random Jokes Generator</a></li>
             <li><a href="./random-password-generator">Random Password Generator</a></li>
             <li><a href="./youtube-clone">Youtube Home Page Clone</a></li>
@@ -66,6 +81,8 @@
             <li><a href="./type-writter-effect">Type Writter Effect</a></li>
             <li><a href="./navbar-design">Navbar Design</a></li>
             <li><a href="./resume-design">Resume Design</a></li>
+            <li><a href="./reviews-collector">Reviews Collector</a></li>
+            <li><a href="./todo-app">Todo App Collector</a></li>
         </ol>
     </main>
 </body>
