main index animation add

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             color: #ffffff;
             padding-top: 30px;
             font-size: 18px;
+            padding-bottom: 100px;
         }
 
         main li {
@@ -45,6 +46,9 @@
         main li a {
             text-decoration: none;
             color: #adabab;
+        }
+        main li a:hover{
+            font-weight: 600;
         }
     </style>
 </head>
@@ -82,7 +86,7 @@
             <li><a href="./navbar-design">Navbar Design</a></li>
             <li><a href="./resume-design">Resume Design</a></li>
             <li><a href="./reviews-collector">Reviews Collector</a></li>
-            <li><a href="./todo-app">Todo App Collector</a></li>
+            <li><a href="./todo-app">Todo App </a></li>
         </ol>
     </main>
 </body>
