--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <li><a href="./background-changer-2">Background Changer 1</a></li>
             <li><a href="./bmi-calculator-1">Bmi Calculator-1</a></li>
             <li><a href="./bmi-calculator-1">Bmi Calculator-2</a></li>
-            <li><a href="./countdown-timer">Countdown Timer</a></li>
+            <li><a href="./countdown-timer-1">Countdown Timer-1</a></li>
+            <li><a href="./countdown-timer-2">Countdown Timer-2</a></li>
             <li><a href="./form-validation">Form Validation</a></li>
             <li><a href="./guess-number-game">Guess Number Game</a></li>
             <li><a href="./guess-number-game">keypress ode</a></li>
