update code in random jokes generator

--- a/random-jokes-generator/index.html
+++ b/random-jokes-generator/index.html
@@ -12,6 +12,7 @@
     <div id="auto-jokes">
 
     </div>
+    <button id="click-button">Click to Generate Random Jokes</button>
     <script src="script.js"></script>
 </body>
 </html>
