update: index page

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             <li><a href="./resume-design">Resume Design</a></li>
             <li><a href="./reviews-collector">Reviews Collector</a></li>
             <li><a href="./todo-app">Todo App </a></li>
+            <li><a href="./text-color-change">Text Color Change </a></li>
+            <li><a href="./profile-form-live-change">Profile Form Live Change </a></li>
+            <li><a href="./light-bulb">Light Bulb Change</a></li>
+            <li><a href="./image-carousel">Image Carousel</a></li>
         </ol>
     </main>
 </body>
