add: ip address and loaction tracker project

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <li><a href="./random-jokes-generator">Random Jokes Generator</a></li>
             <li><a href="./random-password-generator">Random Password Generator</a></li>
             <li><a href="./youtube-clone">Youtube Home Page Clone</a></li>
-            <li><a href="./Location-Tracker">Location Tracker</a></li>
+            <li><a href="./location-ipaddress/">Location IP Address Tracker</a></li>
+            <li><a href="./location-tracker/">Location Tracker</a></li>
             <li><a href="./type-writter-effect">Type Writter Effect</a></li>
             <li><a href="./navbar-design">Navbar Design</a></li>
             <li><a href="./resume-design">Resume Design</a></li>
